# CMMN-parser

./: .coverage  .gitignore  Makefile  README.md  enterprise_test_example.json  example.py  pyproject.toml
.github/workflows/: ci.yml  pr-checks.yml  release.yml
cmmn_parser/: __init__.py  exceptions.py  json_parser.py  models.py  parser.py  schema.json  validation.py  validator.py  xml_parser.py
examples/: README.md  test_examples.py
examples/json/: 01-basic-case.json  02-human-tasks.json  03-process-tasks.json  04-stages-and-milestones.json  05-sentries-and-criteria.json  06-case-file-items.json  07-decision-tasks.json  08-complex-example.json
examples/xml/: 01-basic-case.xml  02-human-tasks.xml  03-process-tasks.xml  04-stages-and-milestones.xml  05-sentries-and-criteria.xml  06-case-file-items.xml  07-decision-tasks.xml  08-complex-example.xml
src/CMMN_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cmmn_parser/: __init__.py  models.py  parser.py  schema.json
tests/: __init__.py  test_convenience_functions.py  test_exceptions.py  test_integration.py  test_json_parser.py  test_json_parsing.py  test_models.py  test_parser.py  test_validation.py  test_validator.py  test_xml_parser.py
tests/fixtures/: minimal_cmmn.json  minimal_cmmn.xml  sample_cmmn.json  sample_cmmn.xml
